--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.2",
-        "laravel/lumen-framework": "^6.0"
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "^6.3",
+        "kozz/laravel-guzzle-provider": "^6.1",
+        "laravel/lumen-framework": "^6.0",
+        "sunra/php-simple-html-dom-parser": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
