--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "laravel/lumen",
     "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "keywords": [
+        "framework",
+        "laravel",
+        "lumen"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -10,7 +14,6 @@
         "ext-simplexml": "*",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/lumen-framework": "^7.2.1",
-        "league/csv": "^9.4",
         "mlntn/lumen-artisan-serve": "^1.3",
         "symfony/css-selector": "^5.1",
         "symfony/dom-crawler": "^5.1"
