--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,11 @@
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.4.1",
         "phpunit/phpunit": "^9.2.6",
-        "mockery/mockery": "^1.4.1"
+        "vimeo/psalm": "^4.5"
     },
     "autoload": {
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ],
         "psr-4": {
             "App\\": "app/"
         }
